# ftp-any-get

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  index.d.ts  index.js  npm-patch.sh  package.json  test.mjs
.github/workflows/: CI.yml
__test__/: index.spec.mjs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: ftp_ftps.rs  lib.rs  sftp.rs
